# cloud-egress-ip-ranges

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-release.yml
docs/: confidence.md  operations.md  outputs.md  schema.md  sources.md
scripts/: build.py  lint.py
site/: app.js  index.html  style.css
src/cloud_egress_ip_ranges/: __init__.py  builder.py  cli.py  confidence.py  explain.py  feed.py  lookup.py  models.py  provider_catalog.py
src/cloud_egress_ip_ranges/sources/: __init__.py  asn_bgp.py  atlassian.py  aws.py  azure.py  cloudflare.py  common.py  fastly.py  github.py  gitlab.py  google.py  oracle.py  platforms.py  stripe.py
tests/: test_builder.py  test_cli.py  test_lookup.py  test_models.py  test_smoke.py  test_sources.py
tests/fixtures/: atlassian-ip-ranges.json  aws-ip-ranges.json  azure-service-tags.json  cloudflare-api.json  cloudflare-ips-v4.txt  cloudflare-ips-v6.txt  fastly-public-ip-list.json  github-meta.json  gitlab-com.html  google-cloud.json  google-goog.json  oracle-public-ip-ranges.json  ripe-announced-prefixes-empty.json  stripe-api-ips.json  stripe-webhook-ips.json
