[project]
name = "cloud-egress-ip-ranges"
version = "0.1.0"
description = "Classified cloud, serverless, and edge egress IP ranges from official provider feeds."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "ipanalytics" }]
keywords = ["cloud", "egress", "ip-ranges", "serverless", "security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]

[project.scripts]
cloud-egress-ip-ranges = "cloud_egress_ip_ranges.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloud_egress_ip_ranges"]

